# stream

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pythonapp.yml
burak/stream/: __init__.py  _version.py  kafka.py  redis.py
curent/stream/: __init__.py  _version.py  helper.py  kafka.py  redis.py
